Changes from 1.01-2 to 1.0-3 [17-Apr-2017]

- believe the glitch in multivariate derivatives with zero degree bases is fixed

- added grid lambda capability, modified defaults

- only report singular candidate bases if they receive non-zero weight in the final model

Changes from 1.01-1 to 1.0-2 [14-Apr-2017]

- added parallel capabilities to intensive parts (generating candidate models, bootstrapping, anova)

- best constant overall for lambda from extensive simulations and an application is 1e-01/n... now modified 1e-01*p/n where p is the number of categorical predictors (slightly more smoothing in small sample settings as you add more categorical predictors)

Changes from 1.16 to 1.0-1 [11-Apr-2017]

- need to divide lambda by n for consistency (the optimal bandwidth for discrete covariates is proportional to 1/n)... the constant 1e-02 is then 1e-02/n so for n=100 1e-04, 1000 -05 etc. Simulations and real data hold-out experiments suggest this is a good middle ground value.

- changed version number, script for inserting correct date and version number, changes to plot for respecting xlim

Changes from Version 1.15 to 1.16 [9-Apr-2017]

- scaling y prior to computing model average weights to have unit variance and zero mean
- added degree 0 possibility

Changes from Version 1.14 to 1.15 [8-Apr-2017]

- dumped derivative-based test as anova-based approach is working splendidly

Changes from Version 1.13 to 1.14 [6-Apr-2017]

- added option to restrict the sum of ma.weights to one or not (previous used this restriction, now default it to not restrict)

Changes from Version 1.12 to 1.13 [6-Apr-2017]

- issue with inference resolved, added options compute.sigtest.deriv (derivative based inference) and compute.sigtest.anova (F-based inference)

Changes from Version 1.11 to 1.12 [5-Apr-2017]

- potting added horizontal line for derivatives

Changes from Version 1.10 to 1.11 [4-Apr-2017]

- modifying significance testing, changed defaults
